Bug 1549202: Ensure ContentSelectDropdown local accessibles return the focused <select> remote accessible as their parent r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D243029