accessible/base/XULMap.h
@@ -15,7 +15,6 @@ XULMAP_TYPE(menu, XULMenuitemAccessible)
 XULMAP_TYPE(menubar, XULMenubarAccessible)
 XULMAP_TYPE(menucaption, XULMenuitemAccessible)
 XULMAP_TYPE(menuitem, XULMenuitemAccessible)
-XULMAP_TYPE(menulist, XULComboboxAccessible)
 XULMAP_TYPE(menuseparator, XULMenuSeparatorAccessible)
 XULMAP_TYPE(notification, XULAlertAccessible)
 XULMAP_TYPE(radio, XULRadioButtonAccessible)
@@ -65,6 +64,19 @@ XULMAP(image,
          }
 
          return new ImageAccessible(aElement, aContext->Document());
+       })
+
+XULMAP(menulist,
+       [](Element* aElement, LocalAccessible* aContext) -> LocalAccessible* {
+         nsAutoString domID;
+         if (nsCoreUtils::GetID(aElement, domID)) {
+           if (domID.Equals(u"ContentSelectDropdown"_ns)) {
+             return new XULContentSelectDropdownAccessible(
+                 aElement, aContext->Document());
+           }
+         }
+
+         return new XULComboboxAccessible(aElement, aContext->Document());
        })
 
 XULMAP(menupopup, [](Element* aElement, LocalAccessible* aContext) {
