accessible/xul/XULComboboxAccessible.h
@@ -37,6 +37,21 @@ class XULComboboxAccessible : public AccessibleWrap {
   MOZ_CAN_RUN_SCRIPT_BOUNDARY bool AreItemsOperable() const override;
 };
 
+/**
+ * Used for the singular, global instance of a XULCombobox which is rendered
+ * in the parent process and contains the options of the focused and expanded
+ * HTML select in a content document. This combobox should have
+ * id=ContentSelectDropdown
+ */
+class XULContentSelectDropdownAccessible : public XULComboboxAccessible {
+ public:
+  XULContentSelectDropdownAccessible(nsIContent* aContent, DocAccessible* aDoc)
+      : XULComboboxAccessible(aContent, aDoc) {}
+  // Accessible
+
+  virtual Accessible* Parent() const override;
+};
+
 }  // namespace a11y
 }  // namespace mozilla
 
